--- a/interface/styles.css
+++ b/interface/styles.css
@@ -63,37 +63,6 @@
   border-radius: 50%;
 }
 
-/* .styled-table table th:nth-of-type(1), .styled-table table tr td:nth-of-type(1) {
-  width: 75px;
-}
-.styled-table table th:nth-of-type(2), .styled-table table tr td:nth-of-type(2) {
-  width: 140px;
-  text-align: left;
-}
-.styled-table table th:nth-of-type(3), .styled-table table tr td:nth-of-type(3) {
-  width: 120px;
-}
-.styled-table table th:nth-of-type(3) #dateSort, .styled-table table tr td:nth-of-type(3) #dateSort {
-  width: 12px;
-  height: 12px;
-  margin-right: 5px;
-  filter: invert(0.95);
-  cursor: pointer;
-}
-.styled-table table th:nth-of-type(3) div div, .styled-table table tr td:nth-of-type(3) div div {
-  margin-right: 20px;
-}
-.styled-table table th:nth-of-type(4), .styled-table table tr td:nth-of-type(4) {
-  width: 103px;
-}
-.styled-table table th:nth-of-type(5), .styled-table table tr td:nth-of-type(5) {
-  width: 102px;
-}
-.styled-table table th:nth-of-type(6), .styled-table table tr td:nth-of-type(6) {
-  width: 160px;
-} */
-
-
 * {
   font-family: Arial, Verdana, Helvetica, sans-serif;
 }
@@ -125,42 +94,6 @@ body {
 .center {
   justify-content: center;
   align-items: center;
-}
-
-.width-full {
-  width: 100%;
-}
-
-.stretch {
-  align-items: stretch;
-}
-
-.align-self-2start {
-  align-self: flex-start;
-}
-
-.center-text {
-  text-align: center;
-}
-
-br {
-  margin: 5px 0;
-}
-
-.space-left {
-  margin-left: 10px;
-}
-
-.space-right {
-  margin-right: 10px;
-}
-
-.space-top {
-  margin-top: 15px;
-}
-
-.margin-sides {
-  margin: 0 20px;
 }
 
 .card {
@@ -211,3 +144,12 @@ main {
   max-width: 1720px;
   margin: auto;
 }
+
+br {margin: 5px 0;}
+.width-full {width: 100%;}
+.center-text {text-align: center;}
+.space-left {margin-left: 10px;}
+.space-right {margin-right: 10px;}
+.space-top {margin-top: 15px;}
+.align-self-2start {align-self: flex-start;}
+.margin-sides {margin: 0 20px;}
